--- a/src/app/features/admin/admin.component.html
+++ b/src/app/features/admin/admin.component.html
@@ -22,6 +22,10 @@
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-shirt"></i></div>
                             Sản phẩm
                         </a>
+                        <a class="nav-link" routerLink="/admin/coupon">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-ticket"></i></div>
+                            Giảm giá
+                        </a>
                         <a class="nav-link" routerLink="/admin/category">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
                             Danh mục
