--- a/src/app/features/admin/dashboard/dashboard.component.html
+++ b/src/app/features/admin/dashboard/dashboard.component.html
@@ -14,158 +14,43 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-body">
-                            <p-table #dt1 [value]="customers" dataKey="id" [rows]="10"
-                                [rowsPerPageOptions]="[10, 25, 50]" [loading]="loading" [paginator]="true"
-                                [globalFilterFields]="['name', 'country.name', 'representative.name', 'status']">
+                            <p-table #dt2 [value]="soldProducts" dataKey="name" [rows]="10"
+                                [rowsPerPageOptions]="[10, 25, 50]" [paginator]="true">
                                 <ng-template pTemplate="caption">
                                     <div class="flex">
-                                        <p-button label="Clear" [outlined]="true" icon="pi pi-filter-slash"
-                                            (onClick)="clear(dt1)" />
+                                        <!-- <p-button label="Clear" [outlined]="true" icon="pi pi-filter-slash"
+                                            (onClick)="clear(dt2)" /> -->
                                         <span class="p-input-icon-left ml-auto">
                                             <i class="pi pi-search"></i>
                                             <input pInputText type="text" [(ngModel)]="searchValue"
-                                                (input)="dt1.filterGlobal(handleInput($event, dt1), 'contains')"
-                                                placeholder="Search keyword" />
+                                                (input)="dt2.filterGlobal(handleInput($event, dt2), 'contains')"
+                                                placeholder="Tìm kiếm..." />
                                         </span>
                                     </div>
                                 </ng-template>
                                 <ng-template pTemplate="header">
                                     <tr>
-                                        <th style="min-width:15rem">
-                                            <div class="flex align-items-center">
-                                                Name
-                                                <p-columnFilter type="text" field="name" display="menu" />
-                                            </div>
-                                        </th>
-                                        <th style="min-width:15rem">
-                                            <div class="flex align-items-center">
-                                                Country
-                                                <p-columnFilter type="text" field="country.name" display="menu" />
-                                            </div>
-                                        </th>
-                                        <th style="min-width:15rem">
-                                            <div class="flex align-items-center">
-                                                Agent
-                                                <p-columnFilter field="representative" matchMode="in" display="menu"
-                                                    [showMatchModes]="false" [showOperator]="false"
-                                                    [showAddButton]="false">
-                                                    <ng-template pTemplate="header">
-                                                        <div class="px-3 pt-3 pb-0">
-                                                            <span class="font-bold">Agent Picker</span>
-                                                        </div>
-                                                    </ng-template>
-                                                    <ng-template pTemplate="filter" let-value
-                                                        let-filter="filterCallback">
-                                                        <p-multiSelect [ngModel]="value" [options]="representatives"
-                                                            placeholder="Any" (onChange)="filter($event.value)"
-                                                            optionLabel="name">
-                                                            <ng-template let-option pTemplate="item">
-                                                                <div class="inline-block vertical-align-middle">
-                                                                    <img [alt]="option.label"
-                                                                        src="https://primefaces.org/cdn/primeng/images/demo/avatar/{{ option.image }}"
-                                                                        width="24" class="vertical-align-middle" />
-                                                                    <span class="ml-1 mt-1">{{ option.name }}</span>
-                                                                </div>
-                                                            </ng-template>
-                                                        </p-multiSelect>
-                                                    </ng-template>
-                                                </p-columnFilter>
-                                            </div>
-                                        </th>
-                                        <th style="min-width:10rem">
-                                            <div class="flex align-items-center">
-                                                Date
-                                                <p-columnFilter type="date" field="date" display="menu" />
-                                            </div>
-                                        </th>
-                                        <th style="min-width:10rem">
-                                            <div class="flex align-items-center">
-                                                Balance
-                                                <p-columnFilter type="numeric" field="balance" display="menu"
-                                                    currency="USD" />
-                                            </div>
-                                        </th>
-                                        <th style="min-width:10rem">
-                                            <div class="flex align-items-center">
-                                                Status
-                                                <p-columnFilter field="status" matchMode="equals" display="menu">
-                                                    <ng-template pTemplate="filter" let-value
-                                                        let-filter="filterCallback">
-                                                        <p-dropdown [ngModel]="value" [options]="statuses"
-                                                            (onChange)="filter($event.value)" placeholder="Any">
-                                                            <ng-template let-option pTemplate="item">
-                                                                <p-tag [value]="option.value"
-                                                                    [severity]="getSeverity(option.label)" />
-                                                            </ng-template>
-                                                        </p-dropdown>
-                                                    </ng-template>
-                                                </p-columnFilter>
-                                            </div>
-                                        </th>
-                                        <th style="min-width:10rem">
-                                            <div class="flex align-items-center">
-                                                Activity
-                                                <p-columnFilter field="activity" matchMode="between" display="menu"
-                                                    [showMatchModes]="false" [showOperator]="false"
-                                                    [showAddButton]="false">
-                                                    <ng-template pTemplate="filter" let-filter="filterCallback">
-                                                        <p-slider [(ngModel)]="activityValues" [range]="true"
-                                                            (onSlideEnd)="filter($event.values)" styleClass="m-3" />
-                                                        <div class="flex align-items-center px-2">
-                                                            <span>{{ activityValues[0] }}</span>
-                                                            <span>{{ activityValues[1] }}</span>
-                                                        </div>
-                                                    </ng-template>
-                                                </p-columnFilter>
-                                            </div>
-                                        </th>
-                                        <th style="width: 3rem">
-                                            <div class="flex align-items-center">
-                                                Verified
-                                                <p-columnFilter type="boolean" field="verified" display="menu" />
-                                            </div>
-                                        </th>
+                                        <th>Tên sản phẩm</th>
+                                        <th>Danh mục</th>
+                                        <th>Thương hiệu</th>
+                                        <th>Size</th>
+                                        <th>Color</th>
+                                        <th>Số lượng đã bán</th>
                                     </tr>
                                 </ng-template>
-                                <ng-template pTemplate="body" let-customer>
+                                <ng-template pTemplate="body" let-product>
                                     <tr>
-                                        <td>
-                                            {{ customer.name }}
-                                        </td>
-                                        <td>
-                                            <img src="https://primefaces.org/cdn/primeng/images/demo/flag/flag_placeholder.png"
-                                                [class]="'flag flag-' + customer.country.code" style="width: 20px" />
-                                            <span class="ml-1 vertical-align-middle">{{ customer.country.name }}</span>
-                                        </td>
-                                        <td>
-                                            <img [alt]="customer.representative.name"
-                                                src="https://primefaces.org/cdn/primeng/images/demo/avatar/{{ customer.representative.image }}"
-                                                width="32" style="vertical-align: middle" />
-                                            <span class="ml-1 vertical-align-middle">{{ customer.representative.name
-                                                }}</span>
-                                        </td>
-                                        <td>
-                                            {{ customer.date | date: 'MM/dd/yyyy' }}
-                                        </td>
-                                        <td>
-                                            {{ customer.balance | currency: 'USD':'symbol' }}
-                                        </td>
-                                        <td>
-                                            <p-tag [value]="customer.status"
-                                                [severity]="getSeverity(customer.status)" />
-                                        </td>
-                                        <td>
-                                            <p-progressBar [value]="customer.activity" [showValue]="false" />
-                                        </td>
-                                        <td class="text-center">
-                                            <i class="pi"
-                                                [ngClass]="{ 'text-green-500 pi-check-circle': customer.verified, 'text-red-500 pi-times-circle': !customer.verified }"></i>
-                                        </td>
+                                        <td>{{ product.name }}</td>
+                                        <td>{{ product.category }}</td>
+                                        <td>{{ product.brand }}</td>
+                                        <td>{{ product.size }}</td>
+                                        <td>{{ product.color }}</td>
+                                        <td>{{ product.quantity }}</td>
                                     </tr>
                                 </ng-template>
                                 <ng-template pTemplate="emptymessage">
                                     <tr>
-                                        <td colspan="7">No customers found.</td>
+                                        <td colspan="6">Không tìm thấy sản phẩm.</td>
                                     </tr>
                                 </ng-template>
                             </p-table>
