--- a/src/app/features/admin/manage-brand/manage-brand.component.css
+++ b/src/app/features/admin/manage-brand/manage-brand.component.css
@@ -7,3 +7,10 @@
     border: 1px solid #e5e7eb;
     border-width: 0 0 1px 0;
 }
+
+.text-error{
+    display: block;
+    margin-top: 4px;
+    color: #F03B13;
+    font-size: 12px;
+}
