--- a/src/app/features/admin/manage-coupon/manage-coupon.component.html
+++ b/src/app/features/admin/manage-coupon/manage-coupon.component.html
@@ -1,16 +1,16 @@
 <div id="layoutSidenav_content">
     <main>
         <div class="container-fluid px-4">
-            <h1 class="mt-4">Nhà cung cấp</h1>
+            <h1 class="mt-4">Mã giảm giá</h1>
             <div class="mb-3 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-dark" (click)="showDialog()">Thêm nhà cung cấp</button>
+                <button type="button" class="btn btn-dark" (click)="showDialog()">Thêm mã giảm giá</button>
             </div>
             <div class="card mb-4">
                 <p-toast></p-toast>
                 <p-confirmDialog></p-confirmDialog>
                 <div class="card-body">
-                    <p-table #dt editMode="row" [value]="suppliers" dataKey="supplier_ID" [paginator]="true" [rows]="10"
-                        [globalFilterFields]="['supplier_ID', 'supplierName', 'address', 'phoneNumber', 'status']" [responsiveLayout]="'scroll'">
+                    <p-table #dt editMode="row" [value]="coupons" dataKey="coupon_Code" [paginator]="true" [rows]="10"
+                        [globalFilterFields]="['coupon_Code', 'couponName', 'discount', 'unit']" [responsiveLayout]="'scroll'">
                         <ng-template pTemplate="caption">
                             <div class="d-flex">
                                 <span class="p-input-icon-left ml-auto">
@@ -21,73 +21,104 @@
                         </ng-template>
                         <ng-template pTemplate="header">
                             <tr>
-                                <th style="width:5%">ID</th>
-                                <th style="width:30%">Tên Nhà Cung Cấp</th>
-                                <th style="width:30%">Địa Chỉ</th>
-                                <th style="width:10%">Số Điện Thoại</th>
-                                <th style="width:10%">Trạng Thái</th>
-                                <th style="width:15%"></th>
+                                <th style="width:20%">Mã giảm giá</th>
+                                <th style="width:20%">Tên giảm giá</th>
+                                <th style="width:10%">Ngày áp dụng</th>
+                                <th style="width:10%">Ngày kết thúc</th>
+                                <th style="width:10%">Giá trị</th>
+                                <th style="width:10%">Đơn vị</th>
+                                <th style="width:10%">Trạng thái</th>
+                                <th style="width:10%"></th>
                             </tr>
                         </ng-template>
-                        <ng-template pTemplate="body" let-supplier let-editing="editing" let-ri="rowIndex">
-                            <tr [pEditableRow]="supplier">
-                                <td>{{ supplier.supplier_ID }}</td>
+                        <ng-template pTemplate="body" let-coupon let-editing="editing" let-ri="rowIndex">
+                            <tr [pEditableRow]="coupon">
                                 <td>
                                     <p-cellEditor>
                                         <ng-template pTemplate="input">
-                                            <input pInputText type="text" [(ngModel)]="supplier.supplierName" />
+                                            <input pInputText type="text" [(ngModel)]="coupon.coupon_Code" />
                                         </ng-template>
                                         <ng-template pTemplate="output">
-                                            {{ supplier.supplierName }}
+                                            {{ coupon.coupon_Code }}
                                         </ng-template>
                                     </p-cellEditor>
                                 </td>
                                 <td>
                                     <p-cellEditor>
                                         <ng-template pTemplate="input">
-                                            <input pInputText type="text" [(ngModel)]="supplier.address" />
+                                            <input pInputText type="text" [(ngModel)]="coupon.couponName" />
                                         </ng-template>
                                         <ng-template pTemplate="output">
-                                            {{ supplier.address }}
+                                            {{ coupon.couponName }}
                                         </ng-template>
                                     </p-cellEditor>
                                 </td>
                                 <td>
                                     <p-cellEditor>
                                         <ng-template pTemplate="input">
-                                            <input pInputText type="text" [(ngModel)]="supplier.phoneNumber" />
+                                            <input pInputText type="text" [(ngModel)]="coupon.startDate" />
                                         </ng-template>
                                         <ng-template pTemplate="output">
-                                            {{ supplier.phoneNumber }}
+                                            {{ coupon.startDate }}
                                         </ng-template>
                                     </p-cellEditor>
                                 </td>
                                 <td>
                                     <p-cellEditor>
                                         <ng-template pTemplate="input">
-                                            <p-dropdown [options]="statuses" appendTo="body" [(ngModel)]="supplier.status" />
+                                            <input pInputText type="text" [(ngModel)]="coupon.expirationDate" />
                                         </ng-template>
                                         <ng-template pTemplate="output">
-                                            <p-tag [value]="supplier.status ? 'Hoạt động' : 'Ngừng bán' " [severity]="getSeverity(supplier.status)" />
+                                            {{ coupon.expirationDate }}
+                                        </ng-template>
+                                    </p-cellEditor>
+                                </td>
+                                <td>
+                                    <p-cellEditor>
+                                        <ng-template pTemplate="input">
+                                            <input pInputText type="text" [(ngModel)]="coupon.discount" />
+                                        </ng-template>
+                                        <ng-template pTemplate="output">
+                                            {{ coupon.discount }}
+                                        </ng-template>
+                                    </p-cellEditor>
+                                </td>
+                                <td>
+                                    <p-cellEditor>
+                                        <ng-template pTemplate="input">
+                                            <input pInputText type="text" [(ngModel)]="coupon.unit" />
+                                        </ng-template>
+                                        <ng-template pTemplate="output">
+                                            {{ coupon.unit }}
+                                        </ng-template>
+                                    </p-cellEditor>
+                                </td>
+                                <td>
+                                    <p-cellEditor>
+                                        <ng-template pTemplate="input">
+                                            <p-dropdown [options]="statuses" appendTo="body" [(ngModel)]="coupon.status" />
+                                        </ng-template>
+                                        <ng-template pTemplate="output">
+                                            <p-tag [value]="coupon.status ? 'Hoạt động' : 'Đã ngừng' " [severity]="getSeverity(coupon.status)" />
                                         </ng-template>
                                     </p-cellEditor>
                                 </td>
                                 <td>
                                     <div class="flex align-items-center justify-content-center gap-2">
                                         <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
-                                            icon="pi pi-pencil" (click)="onRowEditInit(supplier)"
+                                            icon="pi pi-pencil" (click)="onRowEditInit(coupon)"
                                             class="p-button-rounded p-button-text">
                                         </button>
                                         <button *ngIf="!editing" pButton pRipple type="button"
-                                            icon="pi pi-trash" (click)="deleteSupplier(supplier)"
+                                            icon="pi pi-trash" (click)="deleteSupplier(coupon)"
                                             class="p-button-rounded p-button-text p-button-danger">
                                         </button>
                                         <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
-                                            icon="pi pi-check" (click)="onRowEditSave(supplier, ri)"
+                                            icon="pi pi-check" (click)="onRowEditSave(coupon, ri)"
                                             class="p-button-rounded p-button-text p-button-success mr-2">
                                         </button>
                                         <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
-                                            icon="pi pi-times" (click)="onRowEditCancel(supplier, ri)"
+                                            icon="pi pi-times" (click)="onRowEditCancel(coupon, ri)"
                                             class="p-button-rounded p-button-text p-button-danger">
                                         </button>
                                     </div>
@@ -102,7 +133,7 @@
     <app-admin-footer></app-admin-footer>
 </div>
 
-<p-dialog header="Thêm nhà cung cấp" [modal]="true" [(visible)]="visible" [style]="{ width: '30rem' }" styleClass="p-fluid">
+<!-- <p-dialog header="Thêm nhà cung cấp" [modal]="true" [(visible)]="visible" [style]="{ width: '30rem' }" styleClass="p-fluid">
     <form (ngSubmit) = "createNewSupplier()">
         <div class="mb-4">
           <label for="name" class="form-label">Tên nhà cung cấp</label>
@@ -126,4 +157,4 @@
             <p-button label="Lưu" (onClick)="visible = false" type="submit" />
         </div>
       </form>
-</p-dialog>
+</p-dialog> -->
