--- a/src/app/features/admin/manage-product/manage-product.component.css
+++ b/src/app/features/admin/manage-product/manage-product.component.css
@@ -7,3 +7,15 @@
     border: 1px solid #e5e7eb;
     border-width: 0 0 1px 0;
 }
+
+.format-pic-title {
+    color: rgba(0, 0, 0, 0.7);
+    font-style: italic;
+}
+
+.right-hand-side-avatar {
+    width: 300px;
+    height: 300px;
+    border-radius: 2%;
+    object-fit: cover;
+}
