--- a/src/app/features/admin/manage-product/manage-product.component.html
+++ b/src/app/features/admin/manage-product/manage-product.component.html
@@ -3,42 +3,82 @@
     <div class="container-fluid px-4">
       <h1 class="mt-4">Sản phẩm</h1>
       <div class="mb-3 d-flex flex-row-reverse">
-        <button type="button" class="btn btn-dark" (click)="showDialogProduct('Add', {})">Thêm sản phẩm</button>
+        <button
+          type="button"
+          class="btn btn-dark"
+          (click)="showDialogProduct('Add', {})"
+        >
+          Thêm sản phẩm
+        </button>
       </div>
       <div class="card mb-4">
         <p-toast></p-toast>
         <p-confirmDialog />
         <div class="card-body">
-          <p-table #table [value]="products" dataKey="id" [tableStyle]="{ 'min-width': '50rem' }"
-            class="table table-striped table-bordered">
+          <p-table
+            #table
+            [value]="products"
+            dataKey="id"
+            [tableStyle]="{ 'min-width': '50rem' }"
+            class="table table-striped table-bordered"
+          >
             <ng-template pTemplate="header">
               <tr>
-                <th style="width: 5rem;"></th>
-                <th style="width: 10%;">Mã sản phẩm</th>
-                <th style="width: 55%;">Tên sản phẩm</th>
-                <th style="width: 15%;">Trạng thái</th>
-                <th style="width: 15%;">Hành động</th>
+                <th style="width: 5rem"></th>
+                <th style="width: 10%">Mã sản phẩm</th>
+                <th style="width: 55%">Tên sản phẩm</th>
+                <th style="width: 15%">Trạng thái</th>
+                <th style="width: 15%">Hành động</th>
               </tr>
             </ng-template>
             <ng-template pTemplate="body" let-product let-expanded="expanded">
               <tr>
                 <td>
-                  <p-button type="button" pRipple [pRowToggler]="product" [text]="true" [rounded]="true" [plain]="true"
-                    [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'" />
+                  <p-button
+                    type="button"
+                    pRipple
+                    [pRowToggler]="product"
+                    [text]="true"
+                    [rounded]="true"
+                    [plain]="true"
+                    [icon]="
+                      expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'
+                    "
+                  />
                 </td>
                 <td>{{ product.id }}</td>
                 <td>{{ product.name }}</td>
-                <td>{{ product.status ? 'Hoạt động' : 'Ngừng bán' }}</td>
+                <td>{{ product.status ? "Hoạt động" : "Ngừng bán" }}</td>
                 <td>
-                  <div class="flex align-items-center justify-content-center gap-2">
-                    <button pButton pRipple type="button" icon="pi pi-plus" (click)="showDialogVariation('Add', { pro_Id: product.id})"
-                      class="p-button-rounded p-button-text p-button-success">
-                    </button>
-                    <button pButton pRipple type="button" icon="pi pi-pencil" (click)="showDialogProduct('Edit', product)" class="p-button-rounded p-button-text">
-                    </button>
-                    <button pButton pRipple type="button" icon="pi pi-trash" (click)="deleteProduct(product)"
-                      class="p-button-rounded p-button-text p-button-danger">
-                    </button>
+                  <div
+                    class="flex align-items-center justify-content-center gap-2"
+                  >
+                    <button
+                      pButton
+                      pRipple
+                      type="button"
+                      icon="pi pi-plus"
+                      (click)="
+                        showDialogVariation('Add', { pro_Id: product.id })
+                      "
+                      class="p-button-rounded p-button-text p-button-success"
+                    ></button>
+                    <button
+                      pButton
+                      pRipple
+                      type="button"
+                      icon="pi pi-pencil"
+                      (click)="showDialogProduct('Edit', product)"
+                      class="p-button-rounded p-button-text"
+                    ></button>
+                    <button
+                      pButton
+                      pRipple
+                      type="button"
+                      icon="pi pi-trash"
+                      (click)="deleteProduct(product)"
+                      class="p-button-rounded p-button-text p-button-danger"
+                    ></button>
                   </div>
                 </td>
               </tr>
@@ -50,14 +90,14 @@
                   <p-table [value]="product.productVariations">
                     <ng-template pTemplate="header">
                       <tr>
-                        <th style="width: 10rem;">Mã biến thể</th>
-                        <th style="width: 10rem;">Màu sắc</th>
-                        <th style="width: 10rem;">Kích thước</th>
-                        <th style="width: 10rem;">Giá</th>
-                        <th style="width: 10rem;">Số lượng</th>
-                        <th style="width: 10rem;">Giảm giá</th>
-                        <th style="width: 10rem;">Trạng thái</th>
-                        <th style="width: 10rem;">Hành động</th>
+                        <th style="width: 10rem">Mã biến thể</th>
+                        <th style="width: 10rem">Màu sắc</th>
+                        <th style="width: 10rem">Kích thước</th>
+                        <th style="width: 10rem">Giá</th>
+                        <th style="width: 10rem">Số lượng</th>
+                        <th style="width: 10rem">Giảm giá</th>
+                        <th style="width: 10rem">Trạng thái</th>
+                        <th style="width: 10rem">Hành động</th>
                       </tr>
                     </ng-template>
 
@@ -66,17 +106,32 @@
                         <td>{{ variation.id }}</td>
                         <td>{{ variation.color.name }}</td>
                         <td>{{ variation.size.name }}</td>
-                        <td>{{ variation.price | currency: 'VND' }}</td>
+                        <td>{{ variation.price | currency : "VND" }}</td>
                         <td>{{ variation.quantity }}</td>
                         <td>{{ variation.discount }}%</td>
-                        <td>{{ variation.status ? 'Hoạt động' : 'Ngừng bán' }}</td>
                         <td>
-                          <div class="flex align-items-center justify-content-center gap-2">
-                            <button pButton pRipple type="button" icon="pi pi-pencil" (click)="showDialogVariation('Edit', variation)" class="p-button-rounded p-button-text">
-                            </button>
-                            <button pButton pRipple type="button" icon="pi pi-trash" (click)="deleteVariation(variation)"
-                              class="p-button-rounded p-button-text p-button-danger">
-                            </button>
+                          {{ variation.status ? "Hoạt động" : "Ngừng bán" }}
+                        </td>
+                        <td>
+                          <div
+                            class="flex align-items-center justify-content-center gap-2"
+                          >
+                            <button
+                              pButton
+                              pRipple
+                              type="button"
+                              icon="pi pi-pencil"
+                              (click)="showDialogVariation('Edit', variation)"
+                              class="p-button-rounded p-button-text"
+                            ></button>
+                            <button
+                              pButton
+                              pRipple
+                              type="button"
+                              icon="pi pi-trash"
+                              (click)="deleteVariation(variation)"
+                              class="p-button-rounded p-button-text p-button-danger"
+                            ></button>
                           </div>
                         </td>
                       </tr>
@@ -93,9 +148,14 @@
   <app-admin-footer></app-admin-footer>
 </div>
 
-<p-dialog header="{{ dialogTitle }} sản phẩm" [modal]="true" [(visible)]="visibleDialogProduct" [style]="{ width: '30rem' }"
-  styleClass="p-fluid">
-  <div class="mb-4">
+<p-dialog
+  header="{{ dialogTitle }} sản phẩm"
+  [modal]="true"
+  [(visible)]="visibleDialogProduct"
+  [style]="{ width: '50rem', height: '30rem' }"
+  styleClass="p-fluid"
+>
+  <!-- <div class="mb-4">
     <label for="id" class="form-label">Mã sản phẩm</label>
     <input type="text" class="form-control" [(ngModel)]="product.id" id="id" name="id" disabled>
   </div>
@@ -107,75 +167,243 @@
     <label class="form-check-label me-2" for="active">Trạng thái:</label>
     <input class="form-check-input" type="radio" name="active" id="visible" [(ngModel)]="product.status" [value]="true"> Hoạt động
     <input class="form-check-input ms-2" type="radio" name="active" id="disable" [(ngModel)]="product.status" [value]="false"> Ngừng bán
+  </div> -->
+  <div class="row m-2">
+    <div class="col-md-4 mb-4">
+      <label for="id" class="form-label">Mã sản phẩm</label>
+      <input
+        type="text"
+        class="form-control"
+        [(ngModel)]="product.id"
+        id="id"
+        name="id"
+        disabled
+      />
+    </div>
+    <div class="col-md-4 mb-4">
+      <label for="col_Id" class="form-label">Danh mục</label>
+      <p-dropdown
+        [(ngModel)]="product.cat_Id"
+        [options]="colors"
+        placeholder="Chọn danh mục"
+        optionValue="id"
+        optionLabel="name"
+      >
+      </p-dropdown>
+    </div>
+    <div class="col-md-4 mb-4">
+      <label for="col_Id" class="form-label">Xuất xứ</label>
+      <p-dropdown
+        [(ngModel)]="product.nat_Id"
+        [options]="colors"
+        placeholder="Chọn xuất xứ"
+        optionValue="id"
+        optionLabel="name"
+      >
+      </p-dropdown>
+    </div>
+    <div class="col-md-4 mb-4">
+      <label for="name" class="form-label">Tên sản phẩm</label>
+      <input
+        type="text"
+        class="form-control"
+        [(ngModel)]="product.name"
+        id="name"
+        placeholder="Nhập tên"
+        name="name"
+      />
+    </div>
+    <div class="col-md-4 mb-4">
+      <label for="col_Id" class="form-label">Thương hiệu</label>
+      <p-dropdown
+        [(ngModel)]="product.bra_Id"
+        [options]="colors"
+        placeholder="Chọn thương hiệu"
+        optionValue="id"
+        optionLabel="name"
+      >
+      </p-dropdown>
+    </div>
+    <div class="col-md-4 mb-4">
+      <label for="col_Id" class="form-label">Nhà cung cấp</label>
+      <p-dropdown
+        [(ngModel)]="product.sup_Id"
+        [options]="colors"
+        placeholder="Chọn nhà cung cấp"
+        optionValue="id"
+        optionLabel="name"
+      >
+      </p-dropdown>
+    </div>
+
+    <div class="col-md-6 mb-5">
+      <label class="form-check-label me-2" for="active">Trạng thái:</label>
+      <input
+        class="form-check-input"
+        type="radio"
+        name="active"
+        id="visible"
+        [(ngModel)]="product.status"
+        [value]="true"
+      />
+      Hoạt động
+      <input
+        class="form-check-input ms-2"
+        type="radio"
+        name="active"
+        id="disable"
+        [(ngModel)]="product.status"
+        [value]="false"
+      />
+      Ngừng bán
+    </div>
   </div>
-  <div class="d-flex justify-content-end gap-2 mt-4">
-    <p-button label="Hủy" severity="secondary" (onClick)="visibleDialogProduct = false" />
-    <p-button label="Lưu" (onClick)="dialogTitle === 'Thêm' ? createNewProduct() : editProduct()" />
+  <div class="d-flex justify-content-end gap-2 mt-5">
+    <p-button
+      label="Hủy"
+      severity="secondary"
+      (onClick)="visibleDialogProduct = false"
+    />
+    <p-button
+      label="Lưu"
+      (onClick)="dialogTitle === 'Thêm' ? createNewProduct() : editProduct()"
+    />
   </div>
 </p-dialog>
 
-<p-dialog header="{{ dialogTitle }} biến thể" [modal]="true" [(visible)]="visibleDialogVariation" [style]="{ width: '55rem' }"
-  styleClass="p-fluid">
+<!-- Dialog cho biến thể -->
+
+<p-dialog
+  header="{{ dialogTitle }} biến thể"
+  [modal]="true"
+  [(visible)]="visibleDialogVariation"
+  [style]="{ width: '55rem' }"
+  styleClass="p-fluid"
+>
   <div id="variationsContainer">
     <div class="variation-item mb-3">
+      <!-- <div class="col-1 divided-section d-none d-md-block"></div> -->
+      <div class="row d-flex justify-content-center align-items-center">
+        <div class="ms-4 col-md-4 col-avatar">
+          <div class="d-flex align-items-center flex-column">
+            <div class="avatar">
+              <!-- Hiển thị ảnh đã upload hoặc ảnh mặc định -->
+              <img
+                width="100%"
+                [src]="
+                  avatarUrl || '../../../../assets/images/record/avatar.png'
+                "
+                alt="avatar"
+                class="right-hand-side-avatar"
+                style="object-fit: cover"
+              />
+            </div>
+            <!-- Nút chọn ảnh -->
+            <label
+              for="choose-pic"
+              class="border p-1 mt-3 mb-2 rounded-2"
+              style="cursor: pointer"
+              >Chọn Ảnh</label
+            >
+            <input
+              type="file"
+              name="choose-pic"
+              id="choose-pic"
+              (change)="onFileSelected($event)"
+              hidden
+            />
+            <p class="format-pic-title">Định dạng: .JPEG, .PNG</p>
+          </div>
+        </div>
+      </div>
+
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <label for="col_Id" class="form-label">Màu sắc</label>
-          <p-dropdown [(ngModel)]="variation.col_Id" [options]="colors" optionValue="id" optionLabel="name">
-            <!-- <ng-template pTemplate="selectedItem">
-              <div *ngIf="variation.col_Id">
-                {{ variation.color?.name }}
-              </div>
-            </ng-template> -->
-            <!-- <ng-template let-color pTemplate="item">
-              {{ color.name }}
-            </ng-template> -->
+          <p-dropdown
+            [(ngModel)]="variation.col_Id"
+            [options]="colors"
+            placeholder="Chọn màu sắc"
+            optionValue="id"
+            optionLabel="name"
+          >
           </p-dropdown>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <label for="siz_Id" class="form-label">Kích thước</label>
-          <p-dropdown [(ngModel)]="variation.siz_Id" [options]="sizes" optionValue="id" optionLabel="name">
-            <!-- <ng-template pTemplate="selectedItem">
-              <div *ngIf="variation.siz_Id">
-                {{ variation.size?.name }}
-              </div>
-            </ng-template>
-            <ng-template let-size pTemplate="item">
-              {{ size.name }}
-            </ng-template> -->
+          <p-dropdown
+            [(ngModel)]="variation.siz_Id"
+            [options]="sizes"
+            placeholder="Chọn kích thước"
+            optionValue="id"
+            optionLabel="name"
+          >
           </p-dropdown>
+        </div>
+        <div class="col-md-4">
+          <label for="discount" class="form-label">Khuyến mãi</label>
+          <input
+            type="number"
+            [(ngModel)]="variation.discount"
+            class="form-control"
+            name="discount"
+          />
         </div>
         <div class="col-md-4 mt-3">
           <label for="price" class="form-label">Đơn giá</label>
-          <!-- <input type="number" [(ngModel)]="variation.price" class="form-control" name="price" /> -->
-          <p-inputNumber 
-            inputId="price" 
+          <p-inputNumber
+            inputId="price"
             [(ngModel)]="variation.price"
-            mode="currency" 
-            currency="VND" 
-            locale="vi-VN"  /> 
+            mode="currency"
+            currency="VND"
+            locale="vi-VN"
+          />
+        </div>
+        <div class="col-md-4 mt-3">
+          <label for="import_price" class="form-label">Giá nhập</label>
+          <p-inputNumber
+            inputId="import_price"
+            [(ngModel)]="variation.importPrice"
+            mode="currency"
+            currency="VND"
+            locale="vi-VN"
+          />
         </div>
         <div class="col-md-4 mt-3">
           <label for="quantity" class="form-label">Số lượng</label>
-          <input type="number" [(ngModel)]="variation.quantity" class="form-control" name="quantity" />
-        </div>
-        <div class="col-md-4 mt-3">
-          <label for="discount" class="form-label">Khuyến mãi</label>
-          <input type="number" [(ngModel)]="variation.discount" class="form-control" name="discount" />
+          <input
+            type="number"
+            [(ngModel)]="variation.quantity"
+            class="form-control"
+            name="quantity"
+            disabled
+          />
         </div>
         <div class="col-md-4 mt-3">
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" [(ngModel)]="variation.status" name="status" />
-            <label class="form-check-label" for="status">
-              Hoạt động
-            </label>
+            <input
+              class="form-check-input"
+              type="checkbox"
+              [(ngModel)]="variation.status"
+              name="status"
+            />
+            <label class="form-check-label" for="status"> Hoạt động </label>
           </div>
         </div>
       </div>
     </div>
   </div>
   <div class="d-flex justify-content-end gap-2 mt-4">
-    <p-button label="Hủy" severity="secondary" (onClick)="visibleDialogVariation = false" />
-    <p-button label="Lưu" (onClick)="dialogTitle === 'Thêm' ? createNewVariation() : editVariation()" />
+    <p-button
+      label="Hủy"
+      severity="secondary"
+      (onClick)="visibleDialogVariation = false"
+    />
+    <p-button
+      label="Lưu"
+      (onClick)="
+        dialogTitle === 'Thêm' ? createNewVariation() : editVariation()
+      "
+    />
   </div>
 </p-dialog>
