--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -75,9 +75,9 @@
               >
                 <div class="" style="position: relative; display: inline-flex">
                   <i class="fa-solid fa-cart-shopping"></i>
-                  <div class="cart-number-notify">
+                  <!-- <div class="cart-number-notify">
                     <span>{{ cartItems.length }}</span>
-                  </div>
+                  </div> -->
                 </div>
               </a>
             </li>
