--- a/src/app/features/personal_information/my-orders/my-orders.component.html
+++ b/src/app/features/personal_information/my-orders/my-orders.component.html
@@ -65,10 +65,10 @@
                     </div>
 
                     <div class="row mt-2">
-                        <div class="col-4 col-sm-4 col-md-3 col-lg-2">{{order.datetime|date:"dd-mm-YYYY"}}</div>
+                        <div class="col-4 col-sm-4 col-md-3 col-lg-2">{{order.datetime|date:"dd-MM-yyyy"}}</div>
                         <div class="d-none d-lg-block col-lg-2">{{ order.discount_amount | currency: 'VND' }}</div>
                         <div class="d-none d-lg-block col-lg-2">{{ order.shipping_Charge | currency: 'VND' }}</div>
-                        <div class="col-4 col-sm-4 col-md-3 col-lg-2">{{(order?.total || 0) - (order?.discount_amount || 0) -  (order?.shipping_Charge || 0) | currency: "VND"}}</div>
+                        <div class="col-4 col-sm-4 col-md-3 col-lg-2">{{(order?.total || 0) - (order?.discount_amount || 0) +  (order?.shipping_Charge || 0) | currency: "VND"}}</div>
                         <div class="d-none d-sm-block col-md-3 col-lg-2">{{order.formOfPayment}}</div>
                         <div class="col-4 col-sm-4 col-md-3 col-lg-2">{{order.orderStatus}}</div>
                     </div>
@@ -122,14 +122,14 @@
                 <div class="divided-section-top mx-auto"></div>
 
                 <div class="order-details-common-infor1 card my-3 p-2">
-                    <p>Đặt ngày: {{selectedOrder.datetime|date:"dd-mm-YYYY"}}</p>
+                    <p>Đặt ngày: {{selectedOrder.datetime|date:"dd-MM-yyyy"}}</p>
                     <p class="mb-0">Hình thức thanh toán: {{selectedOrder.formOfPayment}}</p>
                 </div>
                 <div class="order-details-common-infor2 d-flex">
                     <div class="flex-fill card p-2 me-2">
-                        <p>Người nhận: {{user?.name}}</p>
-                        <p>Địa chỉ: {{selectedOrder.address}}</p>
-                        <p class="mb-0">Số điện thoại: {{user?.phoneNumber}}</p>
+                        <p>Người nhận: {{selectedOrder!.address?.split('#')?.[0] || ''}}</p>
+                        <p>Địa chỉ: {{selectedOrder!.address?.split('#')?.[2] || ''}}</p>
+                        <p class="mb-0">Số điện thoại: {{selectedOrder!.address?.split('#')?.[1] || ''}}</p>
                     </div>
                     <div class="flex-fill card p-2 ms-2">
                         <div class="row">
@@ -154,7 +154,7 @@
                         </div>
                         <div class="row">
                             <p class="col-6 mt-3">Tổng cộng</p>
-                            <p class="col-6 mt-3 text-end">{{(selectedOrder.total || 0) - (selectedOrder.discount_amount || 0) -  (selectedOrder.shipping_Charge || 0) | currency: "VND"}}</p>
+                            <p class="col-6 mt-3 text-end">{{(selectedOrder.total || 0) - (selectedOrder.discount_amount || 0) +  (selectedOrder.shipping_Charge || 0) | currency: "VND"}}</p>
                         </div>
                     </div>
                 </div>
